deploy/moodle/dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
  labels:
    app: moodle
spec:
  replicas: 3
  selector:
    matchLabels:
      app: moodle
  template:
    metadata:
      labels:
        app: moodle
    spec:
      containers:
        - name: moodle
          image:  cr-hn-1.bizflycloud.vn/c579f3ab86094f2c97f36b0877ead59a/moodle:custom
          ports:
            - containerPort: 80
          imagePullPolicy: Always
