deploy/moodle/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: moodle
  name: moodle
spec:
  replicas: 2
  serviceName: moodle-service
  selector:
    matchLabels:
      app: moodle
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: moodle
    spec:
      containers:
        - env:
          - name: DB_HOST_READ
            value: 45.124.94.39
          - name: DB_HOST_WRITE
            value: 45.124.94.112
          - name: DB_NAME
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          - name: DB_USER
            value: root
          - name: DB_READ_USER
            value: readuser
          - name: DB_PASS
            value: 0YU8381WUlk1u9ysVbF4Qb5FigNW8z8uCvPI
          - name: THEME
            value: edumy
          - name: REDIS_HOST
            value: 103.107.183.77
          - name: REDIS_PORT
            value: '6379'
          - name: REDIS_PASS
            value: Vcc123**
          - name: REDIS_LOCK_TIMEOUT
            value: '30'
          - name: REDIS_LOCK_EXPIRE
            value: '7200'
          - name: REDIS_LOCK_RETRY
            value: '5'
          - name: SERVER_NAME
            value: 'localhost'
          image: cr-hn-1.bizflycloud.vn/c579f3ab86094f2c97f36b0877ead59a/moodle:latest
          name: moodle
            # resources:
            #   requests:
            #     cpu: 1
            #     memory: "2900Mi"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/moodledata
              name: moodle-pvc
      restartPolicy: Always
      volumes:
        - name: moodle-pvc
          persistentVolumeClaim:
            claimName: moodle-pvc
