deploy/moodle/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: moodle-service
  name: moodle-service
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    app: moodle
  type: LoadBalancer
