deploy/moodle/ingress-test-cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    cert-manager.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - secretName: tls-cert
    hosts:
    - test99.lms.bizflycloud.vn
  ingressClassName: nginx
  rules:
    - host: test99.lms.bizflycloud.vn
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: moodle-service
                port:
                  number: 80
            path: /
