deploy/moodle/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - secretName: wildcard-cert
  ingressClassName: nginx
  rules:
    - host: test99.lms.bizflycloud.vn
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: moodle-service
                port:
                  number: 80
            path: /
